--- a/css/style.css
+++ b/css/style.css
@@ -172,3 +172,9 @@ body {
 .img-about{
     width: 50%;
 }
+
+.jumbo-promo{
+    margin-top: 5rem;
+    background-color: #618a3d;
+    color: white;
+}
